# gs-dronegym

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: evaluate_benchmark.py  export_drone_rollout.py  generate_synthetic_dataset.py  live_viewer.py  load_lerobot_dataset.py  load_libero_dataset.py  preview_synthetic_dataset.py  train_bc.py
gs_dronegym/: __init__.py
gs_dronegym/baselines/: __init__.py  behavior_cloning.py
gs_dronegym/benchmarks/: __init__.py  base.py  drone.py  lerobot.py  libero.py  registry.py
gs_dronegym/cli/: __init__.py  evaluate.py  evaluate_expert.py  generate_dataset.py  inspect_dataset.py  live_viewer.py  preview_dataset_task.py  train_bc.py  validate_dataset.py
gs_dronegym/data/: __init__.py  dataset.py  generation.py  planner.py  schema.py
gs_dronegym/dynamics/: __init__.py  controller.py  quadrotor.py
gs_dronegym/env/: __init__.py  base_env.py  drone_env.py
gs_dronegym/noise/: __init__.py  augmentation.py
gs_dronegym/renderer/: __init__.py  camera_model.py  gsplat_renderer.py  mock_renderer.py
gs_dronegym/scene/: __init__.py  builtin_scenes.py  scene_loader.py
gs_dronegym/tasks/: __init__.py  base_task.py  dynamic_follow.py  narrow_corridor.py  object_nav.py  obstacle_slalom.py  point_nav.py
gs_dronegym/utils/: __init__.py  metrics.py  scene_builder.py  visualization.py
notebooks/: colab_pointnav_gpu_debug.ipynb
paper/: claim_map.md  local_measurements.json  main.tex  paper_experiment_results.json  references.bib  run_local_measurements.py  run_paper_experiments.py
tests/: test_bc.py  test_benchmarks.py  test_dataset_generation.py  test_dynamics.py  test_env.py  test_live_viewer.py  test_metrics.py  test_renderer.py  test_scene_loader.py  test_schema.py  test_tasks.py
